# ai-native

./: .gitignore  AGENTS.md  CONSTITUTION.md  INSTALL.md  README.md  WORKFLOWS.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-pages.yml  publish-pypi.yml  release.yml  test-pkg.yml  test-release.yml
.well-known/: ai-native.json
client/: package.json
client/src/: cli.ts  mcp.ts
docs/: protocol-v1.json  protocol-v1.md
examples/: README.md  simple_agent.py
extension/: .vscodeignore  package.json  tsconfig.json
extension/scripts/: build.mjs
extension/src/: extension.ts  traceView.ts
headless/: Dockerfile  README.md  docker-compose.yml
nodes/: README.md  langgraph_bridge.py
protocol/: openapi.json  package.json
protocol/schemas/: v1.json
protocol/src/: index.ts
protocol/tools/: generate-python-sdk.mjs  generate-zod.mjs  generate.mjs
python-sdk/: README.md  pyproject.toml
python-sdk/src/ai_native_vscode_bridge/: __init__.py  client.py  generated_methods.py
scripts/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh
vscode-bridge/: SKILL.md
vscode-bridge/references/: PROTOCOL-QUICK-REF.md
vscode-bridge/scripts/: bootstrap.sh  call.sh  doctor.sh
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.css  App.tsx  index.css
