[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-native-vscode-bridge"
version = "0.0.1"
description = "Async Python SDK for the AI-Native VS Code Bridge (JSON-RPC over WebSocket)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websockets>=12.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

